[package]
name = "ruddit"
version = "0.1.0"
authors = ["ryoo14 <anana12185@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux =  "~1.2.0"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "~1.0.59"
