[package]
name = "ruddit"
version = "0.1.0"
authors = ["ryoo14 <anana12185@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux =  "~1.2.0"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "~1.0.59"
ureq = { version = "~1.5.2", features = ["json"] }
toml = "~0.5.7"

[[bin]]
name = "ruddit"
path = "src/bin/main.rs"
doc = false

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

